--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>eu.ensup</groupId>
   <artifactId>gestionEleveV2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>gestionEleveV2</name>
   <url>http://maven.apache.org</url>
