--- a/pom.xml
+++ b/pom.xml
@@ -52,5 +52,10 @@
 	    <version>${servlet.api.version}</version>
 	    <scope>provided</scope>
 	</dependency>
+		<dependency>
+	    <groupId>jstl</groupId>
+	    <artifactId>jstl</artifactId>
+	    <version>1.2</version>
+	</dependency>
   </dependencies>
 </project>
