--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,6 @@
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
-  
   <error-page>
     <error-code>500</error-code>
     <location>/500.jsp</location>
@@ -21,11 +20,11 @@
   </servlet-mapping>
   <servlet>
     <description></description>
-    <servlet-name>connection</servlet-name>
-    <servlet-class>eu.ensup.gestionEleveV2.presentation.ConnectionServlet</servlet-class>
+    <servlet-name>etudiantDetail</servlet-name>
+    <servlet-class>eu.ensup.gestionEleveV2.presentation.EtudiantServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>connection</servlet-name>
-    <url-pattern>/connection</url-pattern>
+    <servlet-name>etudiantDetail</servlet-name>
+    <url-pattern>/etudiantDetail</url-pattern>
   </servlet-mapping>
 </web-app>
